@@ -8,15 +8,19 @@
   </execution>
   <comments>
     <en>
-    The &quot;cljet5&quot; driver in GNU Ghostscript 6.51 is buggy,
-    often only the first page gets printed and then Ghostscript quits
-    with an error message. Use &quot;cljet5c&quot; instead (when using
-    Foomatic keep the default setting &quot;Contone&quot; for the
-    &quot;Mode&quot; option).&lt;p&gt;
 
-    The printing system/execution information for this driver serves
-    also for the &quot;cljet5c&quot; driver.
-  </en>
+      This entry is for Ghostscript's built-in PCL 5c driver,
+      accessible through the output devices &quot;cljet5&quot; and
+      &quot;cljet5c&quot;. PCL 5c is the color flavor of PCL
+      5.&lt;p&gt;
+
+      The &quot;cljet5&quot; output device in GNU Ghostscript 6.51 is
+      buggy, often only the first page gets printed and then
+      Ghostscript quits with an error message. Use &quot;cljet5c&quot;
+      instead (when using Foomatic keep the default setting
+      &quot;Contone&quot; for the &quot;Mode&quot; option).&lt;p&gt;
+
+    </en>
   </comments>
   <printers>
     <printer>
@@ -58,7 +62,7 @@
     <printer>
       <id>printer/Xerox-DocuPrint_C20</id>
       <comments>
-        <en>Should work fine with this color laserjet driver.</en>
+        <en>Should work fine with this Color LaserJet driver.</en>
       </comments>
     </printer>
   </printers>
