@@ -1,43 +1,0 @@
-<driver id="driver/cljet5c">
-  <name>cljet5c</name>
-  <url>http://www.ghostscript.com/</url>
-  <thirdpartysupplied />
-  <execution>
-    <ghostscript />
-  </execution>
-  <comments>
-    <en>See cljet5 for more information.</en>
-  </comments>
-  <printers>
-    <printer>
-      <id>printer/Generic-PCL_5c_Printer</id>
-    </printer>
-    <printer>
-      <id>printer/HP-Color_LaserJet_5</id>
-    </printer>
-    <printer>
-      <id>printer/HP-Color_LaserJet_5000</id>
-      <comments>
-        <en>Not tested, probably works.</en>
-      </comments>
-    </printer>
-    <printer>
-      <id>printer/HP-Color_LaserJet_5M</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-5800C</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-5900C</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-8000C</id>
-    </printer>
-    <printer>
-      <id>printer/Xerox-DocuPrint_C20</id>
-      <comments>
-        <en>Should work fine with this color laserjet driver.</en>
-      </comments>
-    </printer>
-  </printers>
-</driver>
