@@ -9,8 +9,11 @@
   <comments>
     <en>
 
-      The printing system/execution information for this driver serves
-      also for the "lj5mono" output device of Ghostscript.&lt;p&gt;
+      This driver entry is for Ghostscript's PCL XL raster driver,
+      accessible through the output devices "lj5gray" and
+      "lj5mono". By choosing the output device the halftoning mode
+      (grayscale or monochrome) is chosen. PPD files from this driver
+      entry allow to set the halftoning mode by an option.&lt;p&gt;
 
       PCL-XL driver for the LaserJet 5, 6 (not 5L and 5P) and
       compatible models up to 1200 dpi resolution. Note that the
