@@ -18,10 +18,6 @@
       <arg_defval>ev/PCL-4-5-InputSlot-Default</arg_defval>
     </constraint>
     <constraint sense="true">
-      <driver>cljet5c</driver>
-      <arg_defval>ev/PCL-4-5-InputSlot-Default</arg_defval>
-    </constraint>
-    <constraint sense="true">
       <driver>laserjet</driver>
       <arg_defval>ev/PCL-4-5-InputSlot-Default</arg_defval>
     </constraint>
