@@ -49,30 +49,41 @@
   <comments>
     <en>
 
-      Use the
-      &lt;a href=&quot;/download/PPD/Kyocera/&quot;&gt;Kyocera PPD file&lt;/a&gt;
-      for PostScript,
-      &lt;a href=&quot;ppd-doc.html&quot;&gt;Instructions&lt;/a&gt; &lt;br&gt;
+      Use the Kyocera PPD file for PostScript (&lt;a
+      href=&quot;ppd-doc.html&quot;&gt;Instructions&lt;/a&gt;)
+      &lt;br&gt;
+
       1200dpi in PostScript mode&lt;br&gt;
-      600dpi with PCL5e monochrome drivers ljet4 and ljet4d for PCL5e and duplex&lt;BR&gt;
-      300dpi with PCL5c color drivers cljet5/cljet5c (note the driver information)&lt;BR&gt;
+
+      600dpi with PCL5e monochrome drivers ljet4 and ljet4d for PCL5e
+      and duplex&lt;br&gt;
+
+      300dpi with PCL 5c color driver cljet5 (note the driver
+      information).&lt;p&gt;
+
       48 MB RAM, upgradeable to 112 MB&lt;br&gt;
+
       Emulations:&lt;br&gt;
+
       PostScript II (KPDL2) with Automatic Emulation Sensing&lt;br&gt;
+
       HP Color LaserJet 5 (PCL5c, PJL), Prescribe II&lt;br&gt;
-      All common Barcode-Fonts (including 2D Barcodes) in ROM&lt;br&gt;
+
+      All common Barcode-Fonts (including 2D Barcodes) in
+      ROM&lt;br&gt;
+
       Reprogrammable EEPROM&lt;br&gt;
-      A network-interface like SB-110 (100Mb/s, supported protocols: TCP/IP, AppleTalk, Novell)
-      is highly recommended, the parallel-port is too slow for such amounts of data 
-      (printing a full-color 1200x1200dpi DIN A4 page transfers up to 52 MB of data).
-    
-      &lt;p&gt;
+
+      A network-interface like SB-110 (100Mb/s, supported protocols:
+      TCP/IP, AppleTalk, Novell) is highly recommended, the
+      parallel-port is too slow for such amounts of data (printing a
+      full-color 1200x1200dpi DIN A4 page transfers up to 52 MB of
+      data).&lt;p&gt;
 
       Maximum paper width: 8.5 inches / 21.6 cm
       (Standard format printer)&lt;p&gt;
 
       Printing engine speed: 4 pages/min&lt;p&gt;
-
 
     </en>
   </comments>
