@@ -49,21 +49,22 @@
   <comments>
     <en>
 
-      Use the
-      &lt;a href=&quot;/download/PPD/Kyocera/&quot;&gt;Kyocera PPD file&lt;/a&gt;
-      for PostScript,
-      &lt;a href=&quot;ppd-doc.html&quot;&gt;Instructions&lt;/a&gt; &lt;br&gt;
+      Use the Kyocera PPD file for PostScript (&lt;a
+      href=&quot;ppd-doc.html&quot;&gt;Instructions&lt;/a&gt;)
+      &lt;br&gt;
+
       1200dpi in PostScript mode&lt;br&gt;
-      600dpi with PCL5e monochrome drivers ljet4 and ljet4d for PCL5e and duplex&lt;BR&gt;
-      300dpi with PCL5c color drivers cljet5/cljet5c (note the driver information).
-    
-      &lt;p&gt;
+
+      600dpi with PCL5e monochrome drivers ljet4 and ljet4d for PCL5e
+      and duplex&lt;br&gt;
+
+      300dpi with PCL 5c color driver cljet5 (note the driver
+      information).&lt;p&gt;
 
       Maximum paper width: 11.7 inches / 29.7 cm
       (Wide format printer)&lt;p&gt;
 
       Printing engine speed: 4 pages/min&lt;p&gt;
-
 
     </en>
   </comments>
