@@ -1,5 +1,11 @@
 2010-03-15  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* driver/cljet5c.xml, driver/cljet5.xml,
+	  opt/PCL-4-5-InputSlot.xml, printer/Kyocera-FS-5800C.xml,
+	  printer/Kyocera-FS-5900C.xml, printer/Kyocera-FS-8000C.xml:
+	  Removed the "cljet5c" driver entry, the "cljet5c" output device of
+	  Ghostscript is already covered by the "cljet5" driver entry.
+
 	* driver/lj5mono.xml, driver/lj5gray.xml, driver/ljet4.xml,
 	  driver/pxlcolor.xml, driver/pxlmono.xml, opt/149.xml, opt/159.xml,
 	  opt/2.xml, printer/Brother-HL-2030.xml,
